@@ -13,4 +13,4 @@ WORKDIR /app
 COPY --from=MAVEN_BUILD /build/target/*.jar /app/app.jar
 
 EXPOSE 9090
-ENTRYPOINT ["java", "-jar", "/app/app.jar"]
+ENTRYPOINT ["java", "--add-opens", "java.base/java.io=ALL-UNNAMED", "-jar", "/app/app.jar"]
